libs/core/proc_macros/api_resource/tests/ui/enum_not_supported.rs
use core_proc_macros::ApiResource;

#[derive(ApiResource)]
#[api_resource(unknown_attr = "value")]  // Invalid attribute should fail
pub struct User {
    id: String,
}

fn main() {}
